fix: fix code merge error (#238)
* fix: fix code merge error

* fix: scrollbar in gallery menu

--- a/@antv/gatsby-theme-antv/site/templates/markdown.module.less
+++ b/@antv/gatsby-theme-antv/site/templates/markdown.module.less
@@ -489,6 +489,7 @@
 }
 
 .galleryAnchor {
+  overflow-x: hidden;
   overflow-y: hidden;
 
   &:hover {
